--- a/client/src/components/product-overview-module/image-gallery/image-view/ImageView.scss
+++ b/client/src/components/product-overview-module/image-gallery/image-view/ImageView.scss
@@ -1,35 +1,27 @@
 @use '../../../App.scss' as *;
 
 .image-view {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  // grid-template-rows: 1fr;
-  // grid-template-columns: 1fr 3fr;
+  display: grid;
+  @include set-size(100%);
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 3fr;
 
-  // .image-view-thumbnails,
-  // .image-view-item,
-  // .image-view-buttons {
-  //   grid-row: 1/2;
-  // }
+  .image-view-thumbnails,
+  .image-view-item,
+  .image-view-buttons {
+    grid-row: 1/2;
+  }
   .image-view-thumbnails {
-    // grid-column: 1/2;
+    grid-column: 1/2;
   }
   .image-view-item {
-    // grid-column: 1 / 3;
-    // opacity: 1;
-    position: absolute;
+    grid-column: 1 / 3;
   }
   .image-view-buttons {
-    // grid-column: 3/3;
+    grid-column: 3/3;
     padding: 0;
     margin: 0;
     position: relative;
     z-index: 4;
   }
-}
-
-img {
-  object-fit: cover;
-  @include set-size(100%);
 }
